feat: Font Changed to Ubuntu Mono and Add Record Entry Popup Updated

--- a/src/assets/fonts/font-icon/icons.html
+++ b/src/assets/fonts/font-icon/icons.html
@@ -67,6 +67,33 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-calendar-minus"></i>
+            </span>
+            <br>
+            <span class='label'>calendar-minus</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-calendar-plus"></i>
+            </span>
+            <br>
+            <span class='label'>calendar-plus</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-close"></i>
+            </span>
+            <br>
+            <span class='label'>close</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-delete"></i>
             </span>
             <br>
